/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package eva2_16_polimorfismo;

/**
 *
 * @author elvat
 */
public interface Figuras {
    double calcularArea();
    double calcularPerimetro();
}
